--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -96,7 +96,12 @@
     "\n",
     "for i in docs:\n",
     "    file = open(i, 'r') \n",
-    "    corpus.append(file.readline())\n"
+    "    corpus.append(file.readline())\n",
+    "\n",
+    "#for doc in docs:\n",
+    "#with open(doc) as file\n",
+    "#texto = file.read()\n",
+    "#corpus.append(texto.replace(\".\", \"\"))"
    ]
   },
   {
@@ -210,21 +215,16 @@
     "    if i not in bag_of_words:   \n",
     "            \n",
     "        bag_of_words.append(i)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "    \n",
     "print(bag_of_words)\n",
     "\n",
     "\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    \n"
+    "#corpus\n",
+    "#conj_words = set()\n",
+    "#for line in corpus:\n",
+    "#conj_words.update(line.split(' '))\n",
+    "#lista_words = list(conj_words)\n",
+    "#el orden es distinto, pero lo aceptamos. "
    ]
   },
   {
@@ -298,7 +298,16 @@
     "        else:\n",
     "            lst.append(0)\n",
     "    term_freq.append(lst)\n",
-    "print(\"term\", term_freq)\n"
+    "print(\"term\", term_freq)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#for corpi in corpus:\n",
+    "#aux = []\n",
+    "#for words in bag_of_words:\n",
+    "#aux.append(corpi.split(\" \".count(word))\n",
+    "#term_freq.append(aux)\n",
+    "#print(term_freq)\n"
    ]
   },
   {
