corregidos dos errores

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grocery list: chocolate, diapers, ice cream.\n"
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
      ]
     }
    ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
-    "print(\"Grocery list: \"+\", \".join([f.lower() for f in food_list if not f.lower().startswith(\"b\")])+\".\")"
+    "print(\"Grocery list: \"+\", \".join([f.lower() for f in food_list if f.lower().startswith(\"b\")])+\".\")"
    ]
   },
   {
