--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -36,14 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9489116004ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'[aAeEiIoOuU]'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print (re.findall ('pupp/w+', text))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
      ]
     }
    ],
@@ -81,7 +85,8 @@
     }
    ],
    "source": [
-    "print (re.findall('(puppy|puppies)',text))"
+    "print (re.findall('(puppy|puppies)',text))\n",
+    "#print (re.findall ('pupp/w+', text))"
    ]
   },
   {
@@ -114,7 +119,8 @@
     }
    ],
    "source": [
-    "print (re.findall('(run|ran)',text))"
+    "print (re.findall('(run|ran)',text))\n",
+    "#re.findall ('r[a-z]n')"
    ]
   },
   {
@@ -204,7 +210,8 @@
     }
    ],
    "source": [
-    "print (re.findall ('\\w{5,}' ,text))"
+    "print (re.findall ('\\w{5,}' ,text))\n",
+    "#re.findall ('\\w\\w\\w\\w')"
    ]
   },
   {
@@ -225,19 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']\n"
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9c51bdf4279a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'b\\w+t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#para sacar las palabras completas que cotienen esas ocurrencias:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#re.findall('\\w*b\\w*t')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
      ]
     }
    ],
    "source": [
-    "print (re.findall ('b\\w+t', text))"
+    "print (re.findall ('b\\w+t', text))\n",
+    "#para sacar las palabras completas que cotienen esas ocurrencias:\n",
+    "#re.findall('\\w*b\\w*t')"
    ]
   },
   {
