--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,9 @@
    ],
    "source": [
     "puppy = re.findall('pupp\\w+', text)\n",
-    "print(puppy)"
+    "print(puppy)\n",
+    "\n",
+    "#res = re.findall('puppy|puppies', text)"
    ]
   },
   {
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,9 @@
    ],
    "source": [
     "run = re.findall('r[a-z]n', text)\n",
-    "print(run)"
+    "print(run)\n",
+    "\n",
+    "#res = re.findall('run|ran',text)"
    ]
   },
   {
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +142,14 @@
        "['ran', 'relay', 'race', 'run']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "re.findall(\"r\\w+\", text)"
+    "re.findall(\"r\\w+\", text)\n",
+    "#res = re.findall('r[a-z]+')"
    ]
   },
   {
@@ -156,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\""
+    "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,19 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This', 'sentence', 'words', 'varying', 'lengths']\n"
+      "['sentence', 'words', 'varying', 'lengths']\n"
      ]
     }
    ],
    "source": [
-    "charact4 = re.findall('\\w{4,}', text)\n",
+    "charact4 = re.findall('\\w{5,}', text)\n",
+    "#res = re.findall('w\\w\\w\\w+', text)\n",
     "print(charact4)"
    ]
   },
@@ -246,7 +252,9 @@
    ],
    "source": [
     "letters = re.findall(\"\\w+b\\w+ | b\\w+\", text)\n",
-    "print(letters)"
+    "print(letters)\n",
+    "\n",
+    "#res = re.findall('\\w*b\\w*t', text)"
    ]
   },
   {
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n",
       "['Teddy Roosevelt', 'Abraham Lincoln']\n"
      ]
     }
@@ -341,6 +350,9 @@
     "capitalsets = re.findall(\"[A-Z]\\w+(?=\\s[A-Z])(?:\\s)[A-Z]\\w+\", text)\n",
     "\n",
     "print(capitalsets)\n",
+    "\n",
+    "#res = re.findall ('[A-Z]\\w+\\s+[A-Z]\\w+', text)\n",
+    "#print(res)\n",
     "\n",
     "#QUESTION: que significa el (?: ???\"non-capturing group\"????"
    ]
@@ -382,7 +394,9 @@
     "\n",
     "quotes = re.findall('(\".*?\")', text)\n",
     "\n",
-    "print(quotes)"
+    "print(quotes)\n",
+    "\n",
+    "#res = re.findall('')"
    ]
   },
   {
