--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('[aeiou]', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppies', 'puppy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('puppy|puppies', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('run|ran', text)\n",
+    "print (res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'relay', 'race', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('r[a-z]+', text)\n",
+    "print (res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence with special characters in it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.sub('!', 'i', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sentence', 'words', 'varying', 'lengths']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\w{5,}', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bet', 'robot', 'beat', 'bot', 'bat', 'but', 'bit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\w*b\\\\w*t', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\w+ea\\\\w+|\\\\w+eo\\\\w+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('[A-Z]\\\\w+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +349,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('[A-Z]\\\\w+\\\\s+[A-Z]\\\\w+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '30', '14', '16', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\d+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,10 +420,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '098-32-5295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\d+-\\\\d+-\\\\d+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,16 +445,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(847)789-0984', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\(\\\\d+\\\\)\\\\d+-\\\\d+', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '(847)789-0984', '098-32-5295', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\\\d+-\\\\d+-\\\\d+|\\\\(\\\\d+\\\\)\\\\d+-\\\\d+', text)\n",
+    "print(res)"
    ]
   },
   {
@@ -349,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
