--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'i', 'o', 'i', 'o', 'e', 'a', 'e', 'e', 'e', 'i', 'a', 'o', 'o', 'u', 'e', 'o', 'o', 'e', 'i', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"[aeiou]\", text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppies', 'puppy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"puppy|puppies\", text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"r[au]n\", text))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'relay', 'race', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"r\\w+\", text))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,19 +150,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Th!s !s a sentence w!th spec!al characters !n !t.\n"
+     ]
+    }
+   ],
    "source": [
-    "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\""
+    "text = \"Th!s !s a sentence w!th spec!al characters !n !t.\"\n",
+    "res=re.sub('1', 'i', text)\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a sentence with special characters in it.'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text.replace(\"!\", \"i\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sente', 'words', 'varyi', 'lengt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\w{5}', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bet', 'robot', 'beat', 'bot', 'bat', 'but', 'bit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=re.findall('\\w*b\\w*t', text)\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ea', 'eo', 'ea', 'ea', 'ea']\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -202,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=re.findall('[A-Z]\\w+', text)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
