captura de pantalla, documento que detalla lo que me ha dado tiempo a hacer y la base de datos que comencé porque no pude realizar la database desde el esquema

--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'u',\n",
+       " 'e',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'i']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(\"[aeiou]\",text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppy']\n",
+      "['puppies']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"puppy\",text))\n",
+    "print(re.findall(\"puppies\",text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['run']\n",
+      "['ran']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\"run\", text))\n",
+    "print(re.findall(\"ran\", text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (<ipython-input-23-649327d72bff>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-649327d72bff>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(re.findall(\\A,text))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(\\A,text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
